@@ -34,7 +34,6 @@ def test_output_excel_mode_with_one_line_G00():
     
     #                         [g,     tool, diam, VC, N, f,   Vf, dist,    time,   line number]
     assert lathe.csvData == [["G0", "T0101", 0, 0, 0, 0, 12500, 600, "=(G2/F2)*60", 7]]
-    assert (lathe.csvData[0][6] / lathe.csvData[0][5])*60 == 2.88
     
 def test_output_excel_mode_with_one_line_G01_cst_feed():
     lathe = FanucLathe()
@@ -48,13 +47,13 @@ def test_output_excel_mode_with_one_line_G01_cst_feed():
     
 def test_output_excel_mode_with_one_line_G01_cst_rot():
     lathe = FanucLathe()
-    file = current_dir + test_dir + "TESTG1_CONSTANT_ROT.g"
+    file = current_dir + test_dir + "TESTG1_CONST_ROT.g"
     with open(file, "r") as file:
         for line in file:
             lathe.interpret(line, excel_mode = True)
     lathe.save_csv_data(excel_mode=True)
     
-    assert lathe.csvData == [["G0", "T0101", 0, 0, 2000, 0.05, "=D2*E2", 40, "=(G2/F2)*60", 5]]
+    assert lathe.csvData == [["G1", "T0101", 0, 0, 2000, 0.05, "=E2*F2", 40, "=(G2/F2)*60", 5]]
     
 def test_output_excel_mode_with_one_line_G01_cst_Vc():
     lathe = FanucLathe()
@@ -64,34 +63,49 @@ def test_output_excel_mode_with_one_line_G01_cst_Vc():
             lathe.interpret(line, excel_mode = True)
     lathe.save_csv_data(excel_mode=True)
     
-    assert lathe.csvData[1] == ["G1", "T0101", 25, 200, "=1000*D2/(PI()*C2)", 0.05, "=D2*E2", 40, "=(G2/F2)*60", 7]
+    assert lathe.csvData[1] == ["G1", "T0101", 50, 200, "=1000*D3/(PI()*C3)", 0.2, "=E3*F3", 22.36, "=(G3/F3)*60", 7]
     
 def test_output_excel_mode_with_one_line_G71_G72():
     lathe = FanucLathe()
-    file = current_dir + test_dir + "TESTG1_VC.g"
+    file = current_dir + test_dir + "TESTG71.g"
     with open(file, "r") as file:
         for line in file:
             lathe.interpret(line, excel_mode = True)
     lathe.save_csv_data(excel_mode=True)
+    print(lathe.csvData)
     
-    assert lathe.csvData[1] == ["G71", "T0101", 0, 0, 0, 0, 200, 0, 54, 5]
+    assert lathe.csvData[1] == ["G71", "T0101", 0, 0, 0, 0, 200, 0, 53.34, 13]
     
 def test_output_excel_mode_with_one_line_G74():
     lathe = FanucLathe()
-    file = current_dir + test_dir + "TESTG1_VC.g"
+    file = current_dir + test_dir + "TESTG74.g"
     with open(file, "r") as file:
         for line in file:
             lathe.interpret(line, excel_mode = True)
     lathe.save_csv_data(excel_mode=True)
     
-    assert lathe.csvData[1] == ["G74", "T0101", 0, 0, 0, 0, 600, 0, 6, 9]
+    assert lathe.csvData == [["G74", "T0101", 0, 0, 0, 0, 600, 0, 6, 10]]
     
 def test_output_excel_mode_with_one_line_G76():
     lathe = FanucLathe()
-    file = current_dir + test_dir + "TESTG1_VC.g"
+    file = current_dir + test_dir + "TEST_G76.g"
     with open(file, "r") as file:
         for line in file:
             lathe.interpret(line, excel_mode = True)
     lathe.save_csv_data(excel_mode=True)
     
-    assert lathe.csvData[1] == ["G76", "T0101", 0, 0, 0, 0, 1500, 0, 4.6, 9]
+    print(lathe.csvData)
+    assert lathe.csvData[1] == ["G76", "T0101", 0, 0, 0, 0, 1500, 0, 4.48, 10]
+
+
+#global test
+
+def test_run_full_on_excel_mode():
+    lathe = FanucLathe()
+    file = current_dir + test_dir + "full.g"
+    with open(file, "r") as file:
+        for line in file:
+            lathe.interpret(line, excel_mode=True)
+    lathe.save_csv_data(excel_mode=True)
+
+    assert True
